WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222435
[GPUP] The GPU Process crashes in WebKit::RemoteLegacyCDMFactoryProxy::getSession() with an assertion failure
https://bugs.webkit.org/show_bug.cgi?id=222435
Summary
[GPUP] The GPU Process crashes in WebKit::RemoteLegacyCDMFactoryProxy::getSes...
Peng Liu
Reported
2021-02-25 13:07:11 PST
https://build.webkit.org/results/Apple-BigSur-Debug-WK2-Tests/r273485%20(374)/com.apple.WebKit.GPU.Development-7268-crash-log.txt
Thread 0 Crashed: 0 com.apple.JavaScriptCore 0x0000000135b0aa4e WTFCrash + 14 (Assertions.cpp:295) 1 com.apple.WebKit 0x000000010826f58b WTFCrashWithInfo(int, char const*, char const*, int) + 27 (Assertions.h:671) 2 com.apple.WebKit 0x0000000108dd8f5b void WTF::HashTable<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashMap<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >::KeyValuePairTraits, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> > >::checkKey<WTF::IdentityHashTranslator<WTF::HashMap<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >::KeyValuePairTraits, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> > >, WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >(WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> const&) + 139 (HashTable.h:647) 3 com.apple.WebKit 0x0000000108dd8de4 WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > >* WTF::HashTable<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashMap<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >::KeyValuePairTraits, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> > >::inlineLookup<WTF::IdentityHashTranslator<WTF::HashMap<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >::KeyValuePairTraits, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> > >, WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >(WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> const&) + 36 (HashTable.h:668) 4 com.apple.WebKit 0x0000000108dd8dad WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > >* WTF::HashTable<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashMap<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >::KeyValuePairTraits, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> > >::lookup<WTF::IdentityHashTranslator<WTF::HashMap<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >::KeyValuePairTraits, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> > >, WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >(WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> const&) + 29 (HashTable.h:661) 5 com.apple.WebKit 0x0000000108dda953 WTF::HashTableConstIterator<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashMap<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >::KeyValuePairTraits, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> > > WTF::HashTable<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashMap<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >::KeyValuePairTraits, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> > >::find<WTF::IdentityHashTranslator<WTF::HashMap<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >::KeyValuePairTraits, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> > >, WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >(WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> const&) const + 83 (HashTable.h:1084) 6 com.apple.WebKit 0x0000000108dda8bb WTF::HashTable<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashMap<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >::KeyValuePairTraits, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> > >::find(WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> const&) const + 43 (HashTable.h:476) 7 com.apple.WebKit 0x0000000108dbd366 WTF::HashMap<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType>, std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> >, WTF::HashTraits<std::__1::unique_ptr<WebKit::RemoteLegacyCDMSessionProxy, std::__1::default_delete<WebKit::RemoteLegacyCDMSessionProxy> > > >::find(WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> const&) const + 54 (HashMap.h:292) 8 com.apple.WebKit 0x0000000108dbd266 WebKit::RemoteLegacyCDMFactoryProxy::getSession(WTF::ObjectIdentifier<WebKit::RemoteLegacyCDMSessionIdentifierType> const&) const + 70 (RemoteLegacyCDMFactoryProxy.cpp:156) 9 com.apple.WebKit 0x0000000108dc78b0 WebKit::RemoteMediaPlayerProxy::mediaPlayerCachedKeyForKeyId(WTF::String const&) const + 320 (RemoteMediaPlayerProxy.cpp:650) 10 com.apple.WebCore 0x000000011c0dc862 WebCore::MediaPlayer::cachedKeyForKeyId(WTF::String const&) const + 66 (MediaPlayer.cpp:1346) 11 com.apple.WebCore 0x0000000118051d6e WebCore::MediaPlayerPrivateAVFoundationObjC::shouldWaitForLoadingOfResource(AVAssetResourceLoadingRequest*) + 2590 (MediaPlayerPrivateAVFoundationObjC.mm:1852)
Attachments
Patch
(1.71 KB, patch)
2021-02-25 13:19 PST
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2021-02-25 13:19:33 PST
Created
attachment 421556
[details]
Patch
EWS
Comment 2
2021-02-25 18:31:19 PST
Committed
r273526
: <
https://commits.webkit.org/r273526
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 421556
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-02-25 18:32:14 PST
<
rdar://problem/74771394
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug