[GPUP] The GPU Process crashes in WebKit::RemoteLegacyCDMFactoryProxy::getSession() with an assertion failure https://bugs.webkit.org/show_bug.cgi?id=222435

Reviewed by Eric Carlson.

Fix an assertion failure on debug bots.

No new tests. Fix crashes on the bots.

* GPUProcess/media/RemoteMediaPlayerProxy.cpp:
(WebKit::RemoteMediaPlayerProxy::mediaPlayerCachedKeyForKeyId const):
We should not search the hash table with an empty key (`m_legacySession`).


Canonical link: https://commits.webkit.org/234600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273526 268f45cc-cd09-0410-ab3c-d52691b4dbfc